# website

./: 404.html  CNAME  Cargo.toml  Dockerfile  README.md  build.sh  index.html  prod.sh  styles-2c8d794a56ffc926.css  styles-9db6d00ebce7d8e3.css  web-8e931ad06971f65.js  web-8e931ad06971f65_bg.wasm  web-bfce90616ee39c48.js
.github/workflows/: rust.yml  tools.yaml
assets/: blocker.level  crossroad.level  diode.level  forward_blocker.level  free.level  or.level
autonomous_agents/: Cargo.toml  README.md
autonomous_agents/src/: lib.rs
autonomous_agents/src/agent/: agent.rs
autonomous_agents/src/agent/tools/: mod.rs  move_action.rs
autonomous_agents/src/map/: cell.rs  map.rs  mod.rs  object.rs
autonomous_agents/src/utility/: test.rs
autonomous_agents/src/world/: world.rs
car_ai/: Cargo.toml
car_ai/src/: lib.rs  main.rs
core/: Cargo.toml
core/pages/: 404.md  404.txt  about_me.txt  cv.txt  experiments.txt  main.md  main.txt  resume.txt
core/src/: database.rs  lib.rs  page_repository.rs  pages.rs  string_utils.rs
core/src/dto/: mod.rs  (+3 more)
server/: Cargo.toml
server/src/: main.rs
server/src/llm/: assistant.rs  database.rs  mod.rs  question_assistant.rs
server/src/llm/actions/: action.rs  mod.rs  output_parser.rs  redirect.rs
server/src/llm/in_memory_vector_store/: builder.rs  mod.rs  store.rs
server/src/llm/prompts/: system.txt
server/src/llm/prompts/actions/: actions.txt  base.txt  instructions.txt
server/src/llm/prompts/base/: prompt.txt  queries.txt
server/src/llm/prompts/biography/: prompt.txt  queries.txt
server/src/llm/prompts/hobby/: prompt.txt  queries.txt
server/src/llm/prompts/jobs/: prompt.txt  queries.txt
server/src/llm/prompts/projects/: prompt.txt  queries.txt
server/src/llm/prompts/resume/: prompt.txt  queries.txt
server/src/llm/router/: mod.rs  router.rs  semantic_router.rs
server/src/llm/utils/: message.rs  mod.rs  similarity.rs
terminal/: Cargo.toml
terminal/src/: main.rs  page_controller.rs
tools/: Dockerfile  README.md
web/: Cargo.toml  index.html  next.config.ts  package-lock.json  package.json  styles.scss
web/src/: main.rs  wire_world.rs
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/actions/: run-command.ts
web/src/components/: OldComputerFilterDefs.tsx  TerminalConsole.tsx  canvas.rs
web/src/config/: welcomeMessage.ts
web/src/pages/: about_me.txt  cv.txt  main.txt
web/src/styles/: TerminalConsole.module.css
web/src/utils/: contentParser.ts  linkOverlayBinder.ts
wire_world/: Cargo.toml  README.MD
(+21 files in other folders)
