[package]
name = "autonomous_agents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
langchain-rust = "3.1.1"
async-trait = "0.1.80"
