[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
langchain-rust = "3.1.1"
futures = "0.3.27"
tokio-stream = "0.1.15"
uuid = { version = "1.8.0", features = ["v4"] }
async-trait = "0.1.79"
itertools = "0.12.1"
tower-http = { version = "0.5.2", features = ["full"] }
http-body-util = "0.1.1"
axum-streams = { version = "0.12", features=["json", "csv", "protobuf", "text"] }
tower = "0.4.13"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"

[dependencies.zhdanov_website_core]
path = "../core"

[dev-dependencies]
mockall = "0.12.1"
tokio-test = "0.4.4"

