[package]
name = "web"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.8"
yew-router = "0.17"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.61"
features = ["HtmlCanvasElement", "CanvasRenderingContext2d"]

[dependencies.zhdanov_website_core]
path = "../core"

[dependencies.zhdanov_wire_world]
path = "../wire_world"
