[package]
name = "web"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
gloo = "0.11.0"
yew-router = "0.18.0"
wasm-bindgen = "0.2.92"
yew-hooks = "0.3.1"
wasm-bindgen-futures = "0.4.34"
wasm-streams = "0.4.0"
futures-util = "0.3.30"

[dependencies.web-sys]
version = "0.3.69"
features = ["HtmlCanvasElement", "CanvasRenderingContext2d"]

[dependencies.zhdanov_website_core]
path = "../core"

#[dependencies.zhdanov_wire_world]
#path = "../wire_world"

[profile.release]
lto = true
opt-level = 's'